# ARISE

./: .env.example  .gitignore  LICENSE  README.md  action_log.jsonl  mcp_server.yaml  pyproject.toml  requirements.txt  run.py
src/ARISE/: config.py  graph.py  main.py  mesh.py  messages.py
src/ARISE/agents/: generic_agent.py  prompts.py
src/ARISE/llm/: client.py
src/ARISE/mcp/: __init__.py  manager.py  registry.py
src/ARISE/mcp/servers/: hotels.py  weather.py
src/ARISE/models/: schema.py
src/ARISE/nodes/: dependency_declaration.py  draft_agent.py  draft_scheduler.py  intitialize.py  output_refinement.py  role_assignment.py  role_refinement.py
src/ARISE/visualization/: visualize.py
