[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ARISE"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "httpx>=0.27",
    "mcp>=1.28,<2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
arise = "ARISE.main:main"

[tool.setuptools.packages.find]
where = ["src"]